@@ -36,12 +36,12 @@ void mosquittopp_test::on_connect(int rc)
 			exit(1);
 		}
 
-		rc = publish(&sent_mid, "pub/test", strlen("0123456789012345678"), "0123456789012345678", 0, false);
+		rc = publish(&sent_mid, "pub/test", strlen("123456789012345678"), "123456789012345678", 0, false);
 		if(rc != MOSQ_ERR_OVERSIZE_PACKET){
 			printf("Fail on publish 1\n");
 			exit(1);
 		}
-		rc = publish(&sent_mid, "pub/test", strlen("012345678901234567"), "012345678901234567", 0, false);
+		rc = publish(&sent_mid, "pub/test", strlen("12345678901234567"), "12345678901234567", 0, false);
 		if(rc != MOSQ_ERR_SUCCESS){
 			printf("Fail on publish 2\n");
 			exit(1);
